# zcuring-app

./: CMakeLists.txt  LICENSE  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/app/: app_ble.c  app_ble.h  app_commands.c  app_commands.h  app_lcd.c  app_lcd.h  app_rest_api.c  app_rest_api.h  app_state.c  app_state.h
main/zeddy/: zeddy_ble.c  zeddy_ble.h  zeddy_dht22.c  zeddy_dht22.h  zeddy_http_server.c  zeddy_http_server.h  zeddy_networking.c  zeddy_networking.h  zeddy_nvs.c  zeddy_nvs.h  zeddy_ota.c  zeddy_ota.h  zeddy_relay.c  zeddy_relay.h  zeddy_switch.c  zeddy_switch.h  zeddy_time.c  zeddy_time.h  zeddy_wifi.c  zeddy_wifi.h
